--- a/streamline_dev/css/utils.css
+++ b/streamline_dev/css/utils.css
@@ -92,3 +92,56 @@
 	width: 100%;
 	height:65px;
 }
+
+.z-1 {
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.z-2 {
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.z-3 {
+	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.flex-row {
+	display: flex;
+	flex-direction: row;
+}
+
+.flex-column {
+	display: flex;
+	flex-direction: column;
+}
+
+.flex-grow-1 {
+	display: flex;
+	flex-grow: 1;
+}
+.space-between {
+	display: flex;
+	justify-content: space-between;
+}
+
+.shadow-hover {
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	transition: box-shadow .3s ease;
+}
+
+.shadow-hover:hover {
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.clickable {
+	cursor: pointer;
+}
+
+.dragable {
+	cursor: move;
+}
+
+.disabled {
+	opacity: .6;
+	cursor: not-allowed;
+}
