--- a/streamline_dev/css/tour.css
+++ b/streamline_dev/css/tour.css
@@ -89,9 +89,7 @@
     background-color: #f7f7f7;
     border-bottom: 1px solid #ebebeb;
     border-radius: 5px 5px 0 0;
-    font-family: 'montserrat', sans-serif;
-    text-transform: uppercase;
-    font-weight: 600;
+    font-family: 'Lato', sans-serif;
     color: #5D5D5D;
 }
 
